--- a/src/index.css
+++ b/src/index.css
@@ -8,27 +8,6 @@
     user-select: none;
 }
 
-/* .container {
-    padding: 0.5rem;
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: repeat(40, 1fr);
-    flex-wrap: wrap;
-    width: 500px;
-    height: 90vmin;
-    background: #dbe9ff;
-    border-radius: 0.5rem;
-    user-select: none;
-    overflow: auto;
-  }
-  
-  .container > div {
-    background: #aaccff;
-    border-radius: 0.25rem;
-    width: 24px;
-    height:24px
-  }
-  
-  .container > div.selected {
-    background: #5f9efc;
-  } */
+.block_underline {
+    text-decoration: none;
+}
